# camtasio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TODO.md  WORK.md  llms_tldr.txt  publish.sh  pyproject.toml
_github/: README.md  pull_request_template.md
_github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
_github/workflows/: docs.yml
example/: test_comprehensive.sh  test_integer_preserved.tscproj  test_scaled.tscproj  test_timescaled.tscproj  testme.sh
issues/: 101.txt  111.txt
ref/: clexporter.txt
src/camtasio/: __init__.py  _version.py  cli.py  legacy_cli.py  scaler.py
src/camtasio/annotations/: __init__.py  callouts.py  types.py
src/camtasio/cli/: __init__.py  app.py
src/camtasio/effects/: __init__.py  base.py  chroma_key.py
src/camtasio/models/: __init__.py  canvas.py  factory.py  media.py  project.py  source.py  timeline.py
src/camtasio/operations/: __init__.py  media_operations.py
src/camtasio/serialization/: __init__.py  json_encoder.py  json_handler.py  loader.py  saver.py  version.py
src/camtasio/transforms/: __init__.py  engine.py
src/camtasio/utils/: __init__.py  color.py  timing.py
src_docs/: mkdocs.yml
src_docs/md/: batch-processing.md  effects-annotations.md  file-format.md  index.md  installation.md  media-management.md  project-basics.md  quickstart.md  scaling-operations.md  timeline-operations.md
testdata/callout.cmproj/: docPrefs  project.tscproj
tests/: __init__.py  conftest.py  test_annotations.py  test_cli.py  test_effects.py  test_effects_new.py  test_factory.py  test_frame_stamp.py  test_json_encoder.py  test_malformed_projects.py  test_media_bin.py  test_media_models.py  test_media_operations.py  test_models.py  test_project.py  test_scaling_operations.py  test_serialization.py  test_timeline.py  test_timing.py  test_track.py  test_transforms.py  test_version_compatibility.py
